Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.2(EOL)
-
None
Description
10.2 cdb7a8fa6928f3fb103ed7f66486dc91 kvm-deb-xenial-x86 2018-01-10 23:54:03 4987 nm Normal run, no --ps-protocol
mariabackup.data_directory w4 [ fail ]
|
Test ended at 2018-01-10 17:37:01
|
|
|
CURRENT_TEST: mariabackup.data_directory
|
mysqltest: At line 9: exec of '/usr/bin/mariabackup --defaults-file=/dev/shm/var/4/my.cnf --backup --target-dir=/dev/shm/var/4/tmp/backup 2>&1' failed, error: 256, status: 1, errno: 11
|
Output from before failure:
|
180110 17:37:01 Connecting to MySQL server host: localhost, user: root, password: set, port: 16040, socket: /dev/shm/var/tmp/4/mysqld.1.sock
|
Using server version 10.2.13-MariaDB-10.2.13+maria~xenial-log
|
/usr/bin/mariabackup based on MariaDB server 10.2.13-MariaDB debian-linux-gnu (i686)
|
mariabackup: uses posix_fadvise().
|
mariabackup: cd to /dev/shm/var/4/mysqld.1/data/
|
mariabackup: open files limit requested 1024, set to 1024
|
mariabackup: using the following InnoDB configuration:
|
mariabackup: innodb_data_home_dir = .
|
mariabackup: innodb_data_file_path = ibdata1:12M:autoextend
|
mariabackup: innodb_log_group_home_dir = ./
|
2018-01-10 17:37:01 3068790720 [Note] InnoDB: Number of pools: 1
|
180110 17:37:01 >> log scanned up to (1656143)
|
2018-01-10 17:37:01 3068790720 [Note] InnoDB: Log sequence number at the start 1637250 and the end 1652116 do not match
|
2018-01-10 17:37:01 3068790720 [ERROR] InnoDB: Checksum mismatch in datafile: ./ibdata1, Space ID:0, Flags: 0. Please refer to http://dev.mysql.com/doc/refman/5.7/en/innodb-troubleshooting-datadict.html for how to resolve the issue.
|
2018-01-10 17:37:01 3068790720 [Note] InnoDB: Restoring page [page id: space=0, page number=0] of datafile './ibdata1' from the doublewrite buffer. Writing 16384 bytes into file './ibdata1'
|
2018-01-10 17:37:01 3068790720 [Warning] InnoDB: Retry attempts for writing partial data failed.
|
2018-01-10 17:37:01 3068790720 [ERROR] InnoDB: Write to file ./ibdata1failed at offset 0, 16384 bytes should have been written, only 0 were written. Operating system error number 9. Check that your OS and file system support files of this size. Check also that the disk is not full or a disk quota exceeded.
|
2018-01-10 17:37:01 3068790720 [ERROR] InnoDB: Error number 9 means 'Bad file descriptor'
|
2018-01-10 17:37:01 3068790720 [Note] InnoDB: Some operating system error numbers are described at https://mariadb.com/kb/en/library/operating-system-error-codes/
|
mariabackup: Could not open or create data files.
|
mariabackup: If you tried to add new data files, and it failed here,
|
mariabackup: you should now edit innodb_data_file_path in my.cnf back
|
mariabackup: to what it was, and remove the new ibdata files InnoDB created
|
mariabackup: in this failed attempt. InnoDB only wrote those files full of
|
mariabackup: zeros, but did not yet use them in any way. But be careful: do not
|
mariabackup: remove old data files which contain your precious data!
|
mariabackup: error: xb_load_tablespaces() failed witherror code 39
|
mariabackup: Stopping log copying thread.
|
.
|
|
|
|
|
|
|
The result from queries just before the failure was:
|
CREATE TABLE t(a INT) ENGINE=InnoDB DATA DIRECTORY='table_data_dir';
|
INSERT INTO t VALUES(1);
|
# xtrabackup backup
|
|
|
- saving '/dev/shm/var/4/log/mariabackup.data_directory/' to '/dev/shm/var/log/mariabackup.data_directory/'
|
|
|
Retrying test mariabackup.data_directory, attempt(2/3)...
|
|
|
worker[4] > Restart - not started
|
Logs not available
Attachments
Issue Links
- relates to
-
MDEV-29165 Merge new release of InnoDB 5.7.39 to 10.3
-
- Closed
-